src/objects/User/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>