src/objects/User/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>