src/objects/User/fields/SBQQ__Theme__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Theme__c</fullName>
    <description>Field that will be set by Select Theme custom link, once one is selected.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Theme</label>
    <length>18</length>
    <type>Text</type>
</CustomField>